feat(api): verify guardian invitations (#43)
